[package]
name = "diskann-rs"
version = "0.3.2"
edition = "2021"
description = "A Rust implementation of DiskANN (Disk-based Approximate Nearest Neighbor search) using the Vamana graph algorithm. Provides memory-efficient vector search through graph traversal and memory-mapped storage, enabling billion-scale search with minimal RAM usage."
license = "MIT" 
repository = "https://github.com/lukaesch/diskann-rs"

[dependencies]
rand = "0.8"
memmap2 = "0.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
bytemuck = "1.14"
rayon = "1.10"
ndarray = { version = "0.16" }
anndists = {version = "0.1.3", default-features = false}
log = { version = "0.4" }

[dev-dependencies]
cpu-time = "1.0.0"
byteorder = "1.5.0"
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"] }
hnsw_rs = "0.3"
sysinfo = "0.32"

[features]
default = []
hdf5 = ["dep:hdf5-metno"]

[dependencies.hdf5-metno]
package = "hdf5-metno"
version = "0.10.0"
optional = true

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "comparison"
harness = false